klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/user/AuditPropertyWithoutUserClassErrorTest.klass
package com.errors

class DummyClass systemTemporal versioned audited
{
    id             : Long id key;
    system         : TemporalRange?   system;
    systemFrom     : TemporalInstant? system from;
    systemTo       : TemporalInstant? system to;
    createdById    : String private createdBy;
    createdOn      : Instant createdOn;
    lastUpdatedById: String private lastUpdatedBy;
}
